# StockPredictor

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py
src/: main.rs
src/api/: mod.rs  routes.rs
src/data/: fetcher.rs  mapper.rs  mod.rs
src/model/: mod.rs  nn.rs  predictor.py  predictor.rs  trainer.rs
src/sql/: fetcher.rs  mod.rs
src/util/: env.rs  time.rs
