[package]
name = "stock_predictor"
version = "0.1.0"
edition = "2021"

[dependencies]
# General
log = "0.4.18"
env_logger = "0.10.0"

time = "0.3.21"

# Data
yahoo_finance_api = "2.0.0"

regex = "1.8.4"

# Model
ndarray = "0.15.6"

linfa = "0.6.1"
linfa-linear = "0.6.1"

# API
actix-web = "4.3.1"
actix-rt = "2.8.0"

serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
