[package]
name = "stock_predictor"
version = "0.1.0"
edition = "2021"

[dependencies]
# General
log = "0.4.18"
env_logger = "0.10.0"

time = "0.3.21"

# Python Integration (call Python from Rust)
pyo3 = { version = "0.19.0", features = ["auto-initialize"] }

# API
dotenv = "0.15.0"

actix-web = "4.3.1"
actix-rt = "2.8.0"

serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

uuid = { version = "1.3.3", features = ["serde", "v4"] }
